# Automated-Disaster-Assessment-

./: .gitignore  README.md  todo.md
backend/: .gitignore  README.md  accuracy_log.py  cropping.py  gemini_api.py  hf_local.py  list_models.py  main.py  main_v2.py  main_v3_idea.md  nano_banana.py  prompt.py  pyproject.toml  requirements.txt  test.env
backend/data/: maps.json
backend/disaster-output/: hurricane-michael_00000015_vlm_results.json
backend/mexico-eq/: main.py
backend/mexico-eq/output/: mexico-earthquake_00000005_vlm_results.json  mexico-earthquake_00000006_vlm_results.json  (+1 more)
backend/mexico-eq/output-geojson/: mexico-earthquake_00000005_vlm_results.geojson  mexico-earthquake_00000006_vlm_results.geojson  mexico-earthquake_00000010_vlm_results.geojson
backend/models/: schemas.py
backend/rag/: ingest.py
backend/routers/: assess.py  chat.py  maps.py
backend/v3/: difference.py  ensemble.py  main_v3.py  main_v3_1_parallel.py  main_v3_2_parallel.py  prompts.py  v3_1_gemini_parallel.py
backend/v4/: difference.py  ensemble.py  prompts.py  upscale.py  v4_gemini.py  v4_iteration.md  v4_openai.py
backend/v5/: difference.py  ensemble.py  prompts.py  upscale.py  v5.md  v5_gemini.py  v5_openai.py
backend/v6/: prompts.py  v6_gemini.py  v6_openai.py
backend/v7/: difference.py  prompts.py  v7_gemini.py  v7_openai.py
backend/v8/: difference.py  prompts.py  v8_gemini.py  v8_openai.py
backend/v9/: difference.py  estimate_cost.py  prompts.py  v9_gemini.py  v9_openai.py  v9_test_openai.py
backend/v_client_1/: api.py  client.py  prompts.py
rag/: main.py  (+3 more)
(+20 files in other folders)
