[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "dotenv>=0.9.9",
    "google-genai>=1.65.0",
    "openai>=2.18.0",
    "pillow>=11.0.0",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.7.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
